--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database-compat.js"></script>
-  <script src="firebase-config.js"></script>
+  <script src="js/firebase-config.js"></script>
 
   <!-- Leaflet + Logic -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
