--- a/index.html
+++ b/index.html
@@ -1,23 +1,37 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Carte interactive</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <!-- Leaflet CSS -->
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+  <!-- Ton style CSS perso -->
   <link rel="stylesheet" href="css/style.css" />
+  <style>
+    #map {
+      height: 500px;
+      margin: 20px 0;
+    }
+  </style>
 </head>
 <body>
-  <h1>📍 Carte des lieux</h1>
-  <div id="map">
+  <h1>📍 Carte interactive des lieux</h1>
+  <div id="map"></div>
 
-  <!-- Firebase -->
+  <!-- Firebase compat (version 9) -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-database-compat.js"></script>
+
+  <!-- Configuration Firebase -->
   <script src="js/firebase-config.js"></script>
 
-  <!-- Leaflet + Logic -->
+  <!-- Leaflet JS -->
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+
+  <!-- Ton script principal -->
   <script src="js/script.js"></script>
 </body>
 </html>
