--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1>📍 Carte des lieux</h1>
-  <div id="map"></div>
+  <div id="map" style="height: 600px;"></div>
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
