--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>📍 Carte des lieux</h1>
+  <h1>📍 Carte des panneaux</h1>
   <div id="map" style="height: 600px;"></div>
 
   <!-- Firebase -->
