--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Carte interactive</title>
+  <title>Carte des panneaux</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>📍 Carte des panneaux</h1>
+  <h1>Carte des panneaux</h1>
   <div id="map" style="height: 600px;"></div>
 
   <!-- Firebase -->
