--- a/index.html
+++ b/index.html
@@ -8,7 +8,18 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1>Carte des panneaux</h1>
+  <h1 style="display: flex; align-items: center; gap: 1rem;">
+  Carte des panneaux
+  <span id="visited-count" style="
+    background-color: #4CAF50;
+    color: white;
+    padding: 0.3rem 0.7rem;
+    border-radius: 999px;
+    font-size: 0.9rem;
+  ">
+    Visités: 0
+  </span>
+</h1>
   <div id="map" style="height: 600px;"></div>
 
   <!-- Firebase -->
