--- a/index.html
+++ b/index.html
@@ -8,23 +8,16 @@
   <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
-  <h1 >
-  Carte des panneaux
-  </h1>
+  <div style="display: flex; justify-content: center; align-items: center; gap: 20px; margin-top: 20px;">
+  <h1 style="margin: 0;">Carte des panneaux</h1>
+  <span id="torn-count" style="background: #ffc107; padding: 6px 12px; border-radius: 8px; font-weight: bold;">
+    Affiches arrachées: 0
+  </span>
+</div>
   
   
   <div id="map" style="height: 600px;"></div>
 
-  <h2>
-    <span id="torn-count" style="
-    background-color: #4CAF50;
-    color: white;
-    padding: 0.3rem 0.7rem;
-    border-radius: 999px;
-    font-size: 0.9rem;
-  ">
-    Affiches arrachées: 0
-  </h2>
 
   <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app-compat.js"></script>
