--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
   <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-  <div style="display: flex; justify-content: center; align-items: center; gap: 20px; margin-top: 20px;">
+<body style="background-color: ##C52C2C;" >
+  <div style="display: flex; justify-content: center; align-items: center; gap: 60px; margin-top: 20px;">
   <h1 style="margin: 0;">Carte des panneaux</h1>
   <span id="torn-count" style="background: #ffc107; padding: 6px 12px; border-radius: 8px; font-weight: bold;">
     Affiches arrachées: 0
